@@ -1,11 +1,15 @@
 package dev.cammiescorner.devotion.common.items;
 
+import com.mojang.datafixers.util.Pair;
 import dev.cammiescorner.devotion.Devotion;
 import dev.cammiescorner.devotion.api.Graph;
 import dev.cammiescorner.devotion.api.research.Research;
+import dev.cammiescorner.devotion.api.research.RiddleData;
 import dev.cammiescorner.devotion.api.spells.AuraType;
+import dev.cammiescorner.devotion.common.MainHelper;
 import dev.cammiescorner.devotion.common.registries.DevotionData;
-import it.unimi.dsi.fastutil.Pair;
+import dev.cammiescorner.devotion.common.registries.DevotionItems;
+import net.minecraft.ChatFormatting;
 import net.minecraft.core.component.DataComponentType;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.InteractionHand;
@@ -27,6 +31,32 @@ public class ResearchScroll extends Item {
 
 	@Override
 	public InteractionResultHolder<ItemStack> use(Level level, Player player, InteractionHand usedHand) {
+		if(!level.isClientSide()) {
+			ItemStack stack = player.getItemInHand(usedHand);
+
+			if(stack.getOrDefault(DevotionData.SCROLL_COMPLETED.get(), false) && stack.has(DevotionData.RESEARCH.get())) {
+				Research research = stack.get(DevotionData.RESEARCH.get());
+
+				if(MainHelper.getResearchIds(player).containsAll(research.getParentIds())) {
+					if(MainHelper.giveResearch(player, research, false)) {
+						stack.consume(1, player);
+						return InteractionResultHolder.success(stack);
+					}
+					else {
+						player.displayClientMessage(Component.translatable("research_error." + Devotion.MOD_ID + ".already_known").withStyle(ChatFormatting.RED), true);
+						return InteractionResultHolder.fail(stack);
+					}
+				}
+				else {
+					player.displayClientMessage(Component.translatable("research_error." + Devotion.MOD_ID + ".dont_know_parents").withStyle(ChatFormatting.RED), true);
+					return InteractionResultHolder.fail(stack);
+				}
+			}
+			else {
+				return InteractionResultHolder.fail(stack);
+			}
+		}
+
 		return super.use(level, player, usedHand);
 	}
 
@@ -45,21 +75,23 @@ public class ResearchScroll extends Item {
 		return stack.getOrDefault(DevotionData.SCROLL_COMPLETED.get(), false);
 	}
 
-	public static List<Pair<AuraType, Integer>> generateRiddle(RandomGenerator random, int maxRiddleLength) {
+	public static ItemStack createScroll(Research research, RandomGenerator random) {
 		List<Graph.Node<AuraType>> path = new ArrayList<>();
 		HashSet<Graph.Edge<AuraType>> visitedEdges = new HashSet<>();
+		Research.Difficulty difficulty = research != null ? research.getDifficulty() : Research.Difficulty.EASY;
+		int maxRiddles = difficulty == Research.Difficulty.EASY ? 4 : difficulty == Research.Difficulty.NORMAL ? 6 : 8;
 
 		// pick random starting node
 		path.add(Devotion.AURA_GRAPH.nodes.get(random.nextInt(Devotion.AURA_GRAPH.nodes.size())));
 
-		while(path.size() < maxRiddleLength) {
+		while(path.size() < maxRiddles) {
 			Graph.Node<AuraType> current = path.getLast();
 			List<Graph.Edge<AuraType>> connections = current.getConnections();
 
 			if(visitedEdges.containsAll(connections)) {
 				// path too short, go back 1 and try again
 				path.removeLast();
-				visitedEdges.removeIf(e -> e.nodes.contains(current) && e.nodes.contains(path.get(path.size() - 1)));
+				visitedEdges.removeIf(e -> e.nodes.contains(current) && e.nodes.contains(path.getLast()));
 				continue;
 			}
 
@@ -72,6 +104,11 @@ public class ResearchScroll extends Item {
 			path.add(next.nodes.stream().filter(n -> n != current).findFirst().orElseThrow(() -> new IllegalStateException("invalid graph")));
 		}
 
-		return path.stream().map(auraTypeNode -> Pair.of(auraTypeNode.obj, random.nextInt(9))).toList();
+		ItemStack stack = new ItemStack(DevotionItems.RESEARCH_SCROLL.get());
+		RiddleData riddleData = new RiddleData(path.stream().map(auraTypeNode -> Pair.of(auraTypeNode.obj, random.nextInt(9))).toList());
+
+		stack.set(DevotionData.RIDDLE_DATA.get(), riddleData);
+
+		return stack;
 	}
 }
